fix cmd line help; add java cmd line args